# nutrition-agent

./: main.py  pyproject.toml
app/: app.py
app/agent/: workflow.py
app/tools/: __init__.py  meals.json  meals_detect.py  websearch.py
